@@ -21,6 +21,7 @@
 - FIX: Conversion from "file:" to "project:" fails (IVYDE-143) (thanks to Will Gorman)
 - FIX: The decorators can throw a NPE at startup (IVYDE-133)
 - FIX: Changing any setting for the classpath container loses the "exported" setting of the classpath container (IVYDE-149)
+- FIX: IvyConsole:java.io.IOException: Output Stream is closed (IVYDE-130)
 
   version 2.0.0 beta1
 ==========================
